[tool.poetry]
name = "strava-api-v3"
version = "1.0.0"
description = "Swagger-generated Strava API v3 for Python."
authors = []
packages = [
    {include = "swagger_client"}
]

[tool.poetry.dependencies]
python = "^3.4"
certifi = ">=14.05.14"
six = ">=1.10"
python-dateutil = ">=2.5.3"
urllib3 = ">=1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
